fix: fix overlay on small screen for qr all locations

--- a/_sass/_qr-footer.scss
+++ b/_sass/_qr-footer.scss
@@ -111,7 +111,7 @@
 }
 
 .qr-all-list img {
-  max-width: 150px;
+  max-width: 120px;
 }
 
 .qr-all-list a {
@@ -169,6 +169,7 @@
   align-items: center;
   flex-direction: row;
   width: 100%;
+  gap: 10%;
 }
 
 .qr-all-images a {
